--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,14 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
+    <link href="static/css/base_style.css" rel="stylesheet">
     <title>{{title}}</title>
 </head>
 <body>
 <header>
     {% if current_user.is_authenticated %}
     <a class="navbar-brand" href="/logout">Выйти из аккаунта {{ current_user.name }}</a>
+    <a class="profile_button" href="/profile_page">Профиль</a>
     {% else %}
     <p>
         <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
