todo: profile page rework

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <header>
     {% if current_user.is_authenticated %}
     <a class="navbar-brand" href="/logout">Выйти из аккаунта {{ current_user.name }}</a>
-    <a class="profile_button" href="/profile_page">Профиль</a>
+    <a class="profile_button" href="/{{ current_user.name }}">Профиль</a>
     {% else %}
     <p>
         <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
