--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Профиль</title>
-    <link href="static/css/base_style.css" rel="stylesheet">
-</head>
-<body>
-<p><img src="static/img/profile_img.png" width="100" height="100"></p>
-<h1>Имя: {{ current_user.name }}</h1>
-<h1>Email: {{current_user.email}}</h1>
-<h1>О себе: {{current_user.about}}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+    <div>
+        <p><img src="static/img/profile_img.png" width="100" height="100"></p>
+        <h1>{{ user.name }}</h1>
+        <h1>О себе:</h1><br/>
+        <p>{{ user.about }}</p>
+    </div>
+    {% if has_admin_permissions %}
+        <div>
+        <a class="btn btn-primary" href="/{{ create_post }}">Добавить пост</a>
+        </div>
+    {% endif %}
+    <div></div>
+{% endblock %}
