--- a/static/css/settings_style.css
+++ b/static/css/settings_style.css
@@ -1,6 +1,24 @@
-.change_settings_button {
+.change_settings_btn {
 
 position: relative;
+display: inline-block;
+padding: 12px 24px;
+font-size: 16px;
+font-weight: bold;
+text-decoration: none;
+background-color: #FF0000;
+color: white;
+border-radius: 4px;
+border: none;
+cursor: pointer;
+
+}
+
+.exit_btn {
+
+position: relative;
+top: 10px;
+left: 1300px;
 display: inline-block;
 padding: 12px 24px;
 font-size: 16px;
