--- a/static/css/base_style.css
+++ b/static/css/base_style.css
@@ -1,32 +1,26 @@
 .settings_btn {
-
-position: relative;
-top: 10px;
-left: 1400px;
-display: inline-block;
-padding: 12px 24px;
-font-size: 16px;
-font-weight: bold;
-text-decoration: none;
-background-color: #004DFF;
-color: white;
-border-radius: 4px;
-border: none;
-cursor: pointer;
-
+    position: relative;
+    top: 10px;
+    left: 1400px;
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #004DFF;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
 }
 
 .settings_btn:hover {
-
-background-color: #FFFFFF;
-font-color: #004DFF;
-
+    background-color: #FFFFFF;
+    color: #004DFF;
 }
 
 .navbar-brand {
-
-position: fixed;
-top: 10px;
-left: 10px;
-
+    position: fixed;
+    top: 10px;
+    left: 10px;
 }
