--- a/templates/base.html
+++ b/templates/base.html
@@ -14,21 +14,22 @@
 </head>
 <body>
 <header>
+    <div>
+        <a class="btn btn-primary" href="/">Главная</a>
+    </div>
     {% if current_user.is_authenticated %}
         <!---a class="navbar-brand" href="/logout">Выйти из аккаунта {{ current_user.name }}</a--->
-        <div>
-            <a class="btn btn-primary" href="/">Главная</a>
-        </div>
+
         <div>
             <a class="btn btn-primary" href="/{{ current_user.name }}">Профиль</a>
-            <a class="btn btn-primary" href="/login">Выйти</a>
+            <a class="btn btn-primary" href="/logout">Выйти</a>
             <a class="btn btn-primary" href="/settings_page">Настройки</a>
         </div>
     {% else %}
-    <p>
-        <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
-        <a class="btn btn-success" href="/login">Войти</a>
-    </p>
+        <div>
+            <a class="btn btn-primary" href="/login">Войти</a>
+            <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
+        </div>
     {% endif %}
 </header>
 <main role="main" class="container">
