--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     {% if current_user.is_authenticated %}
         <!---a class="navbar-brand" href="/logout">Выйти из аккаунта {{ current_user.name }}</a--->
         <div>
-            {% if current_user.is_author() %}
+            {% if not current_user.is_author %}
                 <a class="btn btn-primary" href="/becomecreator">Стать автором</a>
             {% else %}
                 <a class="btn btn-primary" href="/{{ current_user.name }}">Профиль</a>
