--- a/templates/change_settings.html
+++ b/templates/change_settings.html
@@ -8,19 +8,31 @@
         {{ form.name(class="form-control") }}<br>
     </p>
     {% for error in form.name.errors %}
-        <p class="alert alert-danger" role="alert">
-            {{ error }}
-        </p>
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
+    {% endfor %}
+    {% if current_user.author %}
+    <p>
+        {{ form.display_name.label }}<br>
+        {{ form.display_name(class="form-control") }}<br>
+    </p>
+    {% for error in form.display_name.errors %}
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
     {% endfor %}
     <p>
         {{ form.about.label }}<br>
         {{ form.about(class="form-control") }}<br>
     </p>
     {% for error in form.about.errors %}
-        <p class="alert alert-danger" role="alert">
-            {{ error }}
-        </p>
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
     {% endfor %}
+    {% endif %}
+
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     {{message}}
 </form>
