--- a/templates/settings_page.html
+++ b/templates/settings_page.html
@@ -7,9 +7,20 @@
 </head>
 <body>
 <a class="exit_btn" href="/">Вернуться на главную</a>
+{% if custom_photo %}
+<p>
+    <img src = "{{ custom_photo }}" width="100" height="100">
+</p>
+{% else %}
 <p>
     <img src="static/img/profile_img.png" width="100" height="100">
 </p>
+{% endif %}
+
+<form method="POST" enctype="multipart/form-data">
+        <input type="file" name="photo" accept="image/*">
+        <button type="submit">Upload</button>
+    </form>
 
 <h1>Имя: {{ current_user.name }}</h1>
 <h1>Email: {{current_user.email }}</h1>
