--- a/static/css/settings_style.css
+++ b/static/css/settings_style.css
@@ -1,8 +1,16 @@
+main {
+    display: flex;
+    justify-content: space-between;
+}
+main a {
+    margin: 10px;
+}
+
+
+
 .change_settings_btn {
 
 position: relative;
-position: relative;
-display: flex;
 display: inline-block;
 padding: 12px 24px;
 font-size: 16px;
@@ -19,7 +27,6 @@ cursor: pointer;
 .exit_btn {
 
 position: relative;
-display: flex;
 justify-content: space-between;
 top: 10px;
 left: 1300px;
