--- a/templates/change_settings.html
+++ b/templates/change_settings.html
@@ -12,7 +12,7 @@
         {{ error }}
     </p>
     {% endfor %}
-    {% if current_user.author %}
+    {% if current_user.is_author %}
     <p>
         {{ form.display_name.label }}<br>
         {{ form.display_name(class="form-control") }}<br>
