--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link href="static/css/base_style.css" rel="stylesheet">
     <link href="static/css/header.css" rel="stylesheet">
     <link href="static/css/profile.css" rel="stylesheet">
+    <link href="static/css/welcome_style.css" rel="stylesheet">
     <title>{{title}}</title>
 </head>
 <body>
@@ -26,11 +27,6 @@
             {% endif %}
             <a class="btn btn-primary" href="/">Главная</a>
             <a class="btn btn-primary" href="/settings_page">Настройки</a>
-        </div>
-    {% else %}
-        <div>
-            <a class="btn btn-primary" href="/login">Войти</a>
-            <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
         </div>
     {% endif %}
 </header>
