--- a/templates/posts_view.html
+++ b/templates/posts_view.html
@@ -9,5 +9,6 @@
                 <p> {{ post.author }} - {{ post.created_date }}</p>
             </div>
         {% endfor %}
+        <a href="search" class="btn btn-secondary">Поиск пользователя</a>
     </div>
 {% endblock %}
