--- a/templates/search_base.html
+++ b/templates/search_base.html
@@ -13,7 +13,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-
+<a class="btn btn-primary" href="/">Главная</a>
 <main role="main" class="container">
     {% block content %}{% endblock %}
 </main>
