--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,4 @@
-{% extends "search_base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <form action="/search" method="post">
@@ -22,6 +22,7 @@
     {{message}}
     </div>
     <div>
-    <a class="exit_btn" href="/">Назад</a>    </div>
+<!--    <a class="exit_btn" href="/">Назад</a>   -->
+    </div>
 </form>
 {% endblock %}
