--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
             {% endif %}
             <a class="btn btn-primary" href="/">Главная</a>
             <a class="btn btn-primary" href="/settings_page">Настройки</a>
+            <a href="search" class="btn btn-secondary">Поиск пользователя</a>
+            <a href="money" class="btn btn-secondary">Пополнить счёт</a>
+            <a href="transaction" class="btn btn-secondary">Инвестировать</a>
         </div>
     {% endif %}
 </header>
