--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
             {% endif %}
             <a class="btn btn-primary" href="/">Главная</a>
             <a class="btn btn-primary" href="/settings_page">Настройки</a>
+            <a class="btn btn-primary" href="/transaction">Инвестировать</a>
+
         </div>
     {% endif %}
 </header>
